--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.3",
-    "multer": "^1.4.5"
+    "multer": "1.4.5-lts.1"
   }
 }
